fixed: changes and updates
